# sirannon-db

./: .dockerignore  .gitignore  .markdownlint.json  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  biome.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-age.js  check-supply-chain.js
benchmarks/: project.json
benchmarks/server/: .gitignore  Dockerfile  README.md  aggregate.Dockerfile  docker-compose.yml  driver.Dockerfile  pyproject.toml  run-all.sh  sirannon-server.Dockerfile  sirannon-server.mjs
benchmarks/server/config/: benchmark.toml
benchmarks/server/driver/: package.json  pnpm-lock.yaml  tsconfig.json
benchmarks/server/driver/src/: classify.ts  cli.ts  config.ts  engine-cpu.ts  environment.ts  failures.ts  features.ts  harness.ts  loadgen.ts  operations.ts  prepare.ts  progress.ts  reporter.ts  rng.ts  run-store.ts  sdk-runtime.d.ts  sirannon-client.ts  stats.ts  workloads.ts
benchmarks/server/driver/src/drivers/: driver.ts  postgres.ts  registry.ts  sirannon.ts
benchmarks/server/driver/src/workloads/: catalogue.ts  micro.ts  oltp.ts  workload.ts  ycsb.ts
benchmarks/server/src/sirannon_bench/: __init__.py  aggregate.py  cli.py  features.py
benchmarks/server/src/sirannon_bench/core/: comparison.py  config.py  driver.py  environment.py  harness.py  loadgen.py  registry.py  reporter.py  rng.py  run_store.py  stats.py  workloads.py
benchmarks/server/src/sirannon_bench/drivers/: postgres.py  sirannon.py
benchmarks/server/tests/: test_end_to_end_sirannon.py  test_loadgen.py  test_pipeline.py  test_stats.py  test_workloads.py
loadtest/: .dockerignore  Dockerfile  report.py  run.sh
(+25 files in other folders)
