[project]
name = "sirannon-bench"
description = "Server-versus-server benchmark harness comparing Sirannon over HTTP against PostgreSQL over its socket, with matched durability and an open-loop, coordinated-omission-corrected load generator."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx",
    "psycopg[binary]",
    "psycopg-pool",
    "websockets",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
sirannon-bench = "sirannon_bench.cli:main"
sirannon-bench-aggregate = "sirannon_bench.aggregate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sirannon_bench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sirannon_bench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
