[project]
name = "sirannon-bench"
description = "Aggregation and comparison for the Sirannon-versus-PostgreSQL benchmark. A Node load generator drives both engines through their native clients and writes per-engine result JSON; this package joins those files into the cross-engine comparison the writeup renders."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
sirannon-bench-aggregate = "sirannon_bench.aggregate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sirannon_bench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sirannon_bench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
